# dify-eval

./: .env.example  README.md  build.py  evaluate.py  example.csv  pyproject.toml  run.py
dify_eval/dataset/: dataset.py  model.py
dify_eval/dataset/extractor/: csv_extractor.py  extractor.py  extractor_base.py
dify_eval/eval/: langfuse_eval.py
dify_eval/evaluation/: constants.py  evaluation.py  ragas.py  ragas_models.py
dify_eval/generation/: dify_chat.py  generation.py  langfuse_eval.py
